force-app/main/default/objects/Badge__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>description du badge.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>