force-app/main/default/objects/Badge__c/fields/Points_req__c.field-meta.xml
<CustomField>
    <fullName>Points_req__c</fullName>
    <description>Points required: Nombre de point nécessaire pour obtenir le badge.</description>
    <label>Points req</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>